--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "name": "BanallBot",
+  "name": "BanallBotSenpai",
   "description": "Telegram's bilek migic.",
   "keywords": ["python", "telegram"],
   "logo": "https://te.legra.ph/file/d2a61cac81ae70faa6664.jpg",
